    (Xiaowei Wang via stevel)

    YARN-3738. Add support for recovery of reserved apps running under dynamic
    queues (subru via asuresh)

    YARN-4285. Display resource usage as percentage of queue and cluster in the
    RM UI (Varun Vasudev via wangda)

    YARN-3216. Max-AM-Resource-Percentage should respect node labels. 
    (Sunil G via wangda)

  OPTIMIZATIONS

    YARN-3339. TestDockerContainerExecutor should pull a single image and not
    the entire centos repository. (Ravindra Kumar Naik via raviprak)

    YARN-3469. ZKRMStateStore: Avoid setting watches that are not required. 
    (Jun Gong via kasha)

    YARN-3006. Improve the error message when attempting manual failover with 
    auto-failover enabled. (Akira AJISAKA via wangda)

    YARN-3547. FairScheduler: Apps that have no resource demand should not participate 
    scheduling. (Xianyin Xin via kasha)

    YARN-3259. FairScheduler: Trigger fairShare updates on node events. 
    (Anubhav Dhoot via kasha)

    YARN-2768. Avoid cloning Resource in FSAppAttempt#updateDemand.
    (Hong Zhiguo via kasha)

    YARN-3983. Refactored CapacityScheduleri#FiCaSchedulerApp to easier extend
    container allocation logic. (Wangda Tan via jianhe)

    YARN-3635. Refactored current queue mapping implementation in CapacityScheduler
    to use a generic PlacementManager framework. (Wangda Tan via jianhe)

    YARN-4066. Large number of queues choke fair scheduler.
    (Johan Gustavsson via kasha)

  BUG FIXES

    YARN-3197. Confusing log generated by CapacityScheduler. (Varun Saxena 
    via devaraj)

    YARN-3305. Normalize AM resource request on app submission. (Rohith Sharmaks
    via jianhe)

    YARN-3205 FileSystemRMStateStore should disable FileSystem Cache to avoid
    get a Filesystem with an old configuration. (Zhihai Xu via ozawa)

    YARN-3269. Yarn.nodemanager.remote-app-log-dir could not be configured to 
    fully qualified path. (Xuan Gong via junping_du)
